style.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,500;0,600;1,500;1,600&display=swap');

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

html {
  font-size: 13px;
}

body {
  font-family: 'Barlow Semi Condensed';
  background-color: hsl(210, 46%, 95%);
  /* background-color: hsl(0, 0%, 81%); */
  position: relative;
}

.container {
  width: 90%;
  height: 70vh;
  display: grid;
  margin-top: 2rem;
  gap: 1.5rem;

  grid-template-columns: 1fr;
  grid-template-rows: auto;
  margin: auto auto;
}

.box {
  border-radius: 7px;
  -webkit-border-radius: 7px;
  -moz-border-radius: 7px;
  -ms-border-radius: 7px;
  -o-border-radius: 7px;
  padding: 25px;


}

.box1 {
  background-color: hsl(263, 55%, 52%);
  background-image: url("./images/bg-pattern-quotation.svg");
  background-repeat: no-repeat;
  background-position: 90% 0;
}

.box2 {
  background-color: hsl(217, 19%, 35%);
}

.box3 {
  background-color: hsl(0, 0%, 100%);


}

.box4 {
  background-color: hsl(219, 29%, 14%);
}

.box5 {
  background-color: hsl(0, 0%, 100%);

}

.profile {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.profile .name {
  font-weight: 600;
  color: hsl(0, 0%, 100%);

}

.box3 .profile .name,
.box5 .profile .name {
  font-weight: 600;
  color: black;

}

.profile .validation {
  color: hsl(0, 0%, 100%);
  opacity: 0.5;
}

.box3 .profile .validation,
.box5 .profile .validation {
  opacity: 0.5;
  ;
  color: black;

}

.main-comment {
  padding-bottom: 8px;
}

.box1 .main-comment,
.box2 .main-comment,
.box4 .main-comment {
  color: white;
}

.box1 .comment,
.box2 .comment,
.box4 .comment {
  color: white;
  opacity: 0.70;
}

.box3 .main-comment,
.box5 .main-comment {
  color: black;
}

.box3 .comment,
.box5 .comment {
  color: black;
  opacity: 0.7;
}

.profile-picture-plate {
  border-radius: 50px;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  -ms-border-radius: 50px;
  -o-border-radius: 50px;
}

/* media queries  */
@media screen and (min-width:375px) {

  .container {
    width: 80%;
    height: 70vh;
    display: grid;
    margin-top: 2rem;
    gap: 1.5rem;

    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: auto;

  }

  body {

    font-family: 'Barlow Semi Condensed';
    /* background-color: hsl(210, 46%, 95%); */
    /* background-color: hsl(0, 0%, 81%); */
    background-color: hsl(210, 46%, 95%);


  }

  .box {
    border-radius: 7px;
    -webkit-border-radius: 7px;
    -moz-border-radius: 7px;
    -ms-border-radius: 7px;
    -o-border-radius: 7px;
    padding: 25px;


  }

  .box1 {
    grid-area: 1/1/2/3;
    background-color: hsl(263, 55%, 52%);
    background-image: url("./images/bg-pattern-quotation.svg");
    background-repeat: no-repeat;
    background-position: 90% 0;
  }

  .box2 {
    grid-area: 1/3/2/4;
    background-color: hsl(217, 19%, 35%);
  }

  .box3 {
    grid-area: 2/1/3/2;
    background-color: hsl(0, 0%, 100%);


  }

  .box4 {
    background-color: hsl(219, 29%, 14%);
    grid-area: 2/2/3/4;
  }

  .box5 {
    grid-area: 1/4/3/5;
    background-color: hsl(0, 0%, 100%);

  }

}

